# SUtilities

./: CMakeLists.txt  GTestCMakeLists.txt.in  GTestCmakeLists.txt.in
SUtilities/: CMakeLists.txt  SUtilities.cpp  SUtilities.h
SUtilities/include/: Cast.hpp  Singleton.hpp  TypeList.hpp  Visitable.hpp  Visitor.hpp  units.hpp
SUtilities/test/: CMakeLists.txt  CmakeLists.txt  SingletonTest.cpp  SmallUtilitiesTest.cpp  TypeListTest.cpp  units_test.cpp
